# transfermarket_scraper

./: .gitignore  Readme.md  pyproject.toml
data/: player_info.parquet  player_info_cleaned.parquet  team_info.parquet
notebooks/: design_patterns.ipynb  medium_code.ipynb  medium_data_validation.ipynb  medium_processing_code.ipynb
src/: pipeline.py
src/abstract/: __init__.py  _data_saver.py  _parser.py
src/config/: settings.py
src/parsers/player/: __init__.py  _ages.py  _countries.py  _current_clubs.py  _foots.py  _heights.py  _joined_dates.py  _names.py  _numbers.py  _positions.py  _signing_info.py  _tm_ids.py  _tm_names.py  _values.py
src/parsers/team/: __init__.py  _info.py
src/savers/: __init__.py  _parquet.py
src/schemas/: __init__.py  team.py
src/scraper/: __init__.py  _base.py  _multi.py  _player.py  _team.py  base.py
src/utils/: team_info.py
