[tool.poetry]
name = "02-scrapy"
version = "0.1.0"
description = "Package for scraping data using Scrapy for blog"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
scrapy = "^2.11.2"
requests = "^2.32.3"
pandas = "^2.2.2"
polars = "^1.1.0"
ipykernel = "^6.29.5"
beautifulsoup4 = "^4.12.3"
icecream = "^2.1.3"
rich = "^13.7.1"
httpx-socks = "^0.9.1"
certifi = "^2024.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
