[tool.poetry]
name = "transfermarkt-scraper"
version = "0.1.0"
description = "Transfermarkt scraper"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
